--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <h2> Enseignement </h2>
 
-<p> Vous pouvez trouver les informations et les ressources pédagogiques dans votre cours AMeTICE <a href ="https://ametice.univ-amu.fr/login/index_amu.php" target="_blank"> ici</a> (après avoir renseigné son identifiant et mot de passe). N'hésitez pas à m'envoyer un mail si vous avez des questions. 
+<p> Vous pouvez trouver les informations et les ressources pédagogiques dans votre cours AMeTICE <a href ="https://ametice.univ-amu.fr/login/index_amu.php" target="_blank"> ici</a> (après avoir renseigné son identifiant et mot de passe). N'hésitez pas à m'envoyer un mail si vous avez des questions.
 </p>
 
 
@@ -60,7 +60,7 @@
 		</ul>
 		</p>
 		<p style="margin-top : -30px">
-			 Mon travail porte aussi sur les catégories tannakiennes, les suites automatiques, ...
+			 Mon travail porte aussi sur les catégories tannakiennes et les suites automatiques.
 		</p>
 </div>
 
@@ -100,16 +100,19 @@
 		</h3>
 		<p>
 			<ul>
-			 <li> July 2023, <b>Exposé aux journées du GDR EFI (groupe de recherche "Equations Fonctionnelles et Intéractions") </b>, Rennes.  </li>
-			 <li> July 2022, <b>Exposé à la conférence « Equations Fonctionnelles et Intéractions » de la rencontre internationale AMS-EMS-SMF 2022 </b>, Grenoble.   </li>
-			 <li> March 2022, <b>Séminaire de géométrie analytique de l'IRMAR </b>, Rennes.   </li>
-			 <li> December 2021, <b>Kolchin seminar </b>, New York (en visio conférence).   </li>
-			 <li> November 2021, <b>Séminaire d’analyse du laboratoire Paul Painlevé </b>, Lille.   </li>
-			 <li> October 2021, <b>Séminaire compréhensible </b>, Grenoble.   </li>
-			 <li> October 2021, <b>Séminaire de théorie des nombres de l’Institut Fourier </b>, Grenoble.   </li>
-			 <li> December 2020, <b>Séminaire d’analyse de l’Institut de Recherche Mathématiques Avancée de Strasbourg </b>, Strasbourg (en visio conférence). </li>
-			 <li> January 2020, <b>Exposé à la journée de l’équipe Combinatoire et Théorie des Nombres </b>, Lyon.  </li>
-			 <li> January 2020, <b>Séminaire des doctorants et doctorantes </b>, Lyon.  </li>
+			 <li> Janvier 2024, <b>Séminaire de théorie des nombres de l’Institut Fourier </b>, Grenoble.   </li>
+			 <li> Juillet 2023, <b>Exposé aux journées du GDR EFI (groupe de recherche "Equations Fonctionnelles et Intéractions") </b>, Rennes.  </li>
+			 <li> Juillet 2022, <b>Exposé à la conférence « Equations Fonctionnelles et Intéractions » de la rencontre internationale AMS-EMS-SMF 2022 </b>, Grenoble.   </li>
+			 <li> Juin 2022, <b> Séminaire différentiel </b>, Paris-Saclay.   </li>
+			 <li> Mars 2022, <b> Exposé à la conférence « Functional Equations in Limoges » </b>, Limoges.   </li>
+			 <li> Mars 2022, <b>Séminaire de géométrie analytique de l'IRMAR </b>, Rennes.   </li>
+			 <li> Décembre 2021, <b>Kolchin seminar </b>, New York (en visio conférence).   </li>
+			 <li> Novembre 2021, <b>Séminaire d’analyse du laboratoire Paul Painlevé </b>, Lille.   </li>
+			 <li> Octobre 2021, <b>Séminaire compréhensible </b>, Grenoble.   </li>
+			 <li> Octobre 2021, <b>Séminaire de théorie des nombres de l’Institut Fourier </b>, Grenoble.   </li>
+			 <li> Décembre 2020, <b>Séminaire d’analyse de l’Institut de Recherche Mathématiques Avancée de Strasbourg </b>, Strasbourg (en visio conférence). </li>
+			 <li> Janvier 2020, <b>Exposé à la journée de l’équipe Combinatoire et Théorie des Nombres </b>, Lyon.  </li>
+			 <li> Janvier 2020, <b>Séminaire des doctorants et doctorantes </b>, Lyon.  </li>
 			</ul>
 		</p>
 </div>
