--- a/page_web_en.html
+++ b/page_web_en.html
@@ -24,7 +24,7 @@
 
 		<div class="col-md-1">
 			<br>
-			<button class="button-style" onclick="document.location='index.html'">French</button>
+			<button class="button-style" onclick="document.location='page_web_french.html'">French</button>
 		</div>
 	</div>
 </div>
@@ -96,8 +96,11 @@
 		</h3>
 		<p>
 			<ul>
+			 <li> January 2024, <b>Number theory seminar of the Fourier institute </b>, Grenoble.   </li>
 			 <li> July 2023, <b>Talk at the days of the GDR EFI (research group of functional equations and interactions) </b>, Rennes.  </li>
 			 <li> July 2022, <b>Talk at the conference « Functional Equations and Their Interactions » in the AMS-EMS-SMF joint meeting </b>, Grenoble.   </li>
+			 <li> June 2022, <b> Differential seminar </b>, Paris-Saclay.   </li>
+			 <li> March 2022, <b> Talk at the conference « Functional Equations in Limoges » </b>, Limoges.   </li>
 			 <li> March 2022, <b>Analytic geometry seminar of the IRMAR </b>, Rennes.   </li>
 			 <li> December 2021, <b>Kolchin seminar </b>, New York (online).   </li>
 			 <li> November 2021, <b>Analysis seminar of the laboratory Paul Painlevé </b>, Lille.   </li>
