--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 		 <li> <a href="3orderArxiv.pdf" target="_blank" {color: black}><b>On the computation of the difference Galois groups of order three equations </b> </a>  avec Thomas Dreyfus.  </li>
 		<dd> prépublication, 37 pages, 2023 (<a href ="https://arxiv.org/abs/2208.13448" target="_blank" {color: black}> arxiv </a> ).</dd>
 
-		 <li> <a href="asympmahler.pdf" target="_blank" {color: black}><b>Radial behavior of Mahler functions </b> </a>  avec Tanguy Rivoal.  </li>
-		<dd> prépublication, 36 pages, 2022 (<a href ="https://hal.science/hal-03703010v1" target="_blank" {color: black}> HAL </a> ).</dd>
+		 <li> <a href="VFasymptMahler.pdf" target="_blank" {color: black}><b>Radial behavior of Mahler functions </b> </a>  avec Tanguy Rivoal.  </li>
+		<dd> International Journal of Number Theory, 2024 (<a href ="https://www.worldscientific.com/doi/10.1142/S1793042124501070" target="_blank" {color: black}> IJNT, June 2024, pages 1-40 </a> ).</dd>
 
 		 <li> <a href="Regular_Singular.pdf" target="_blank" {color: black}><b>An algorithm to recognize regular singular Mahler systems </b> </a>  avec Colin Faverjon.  </li>
 		<dd> Mathematics of Computation, 2022 (<a href ="https://www.ams.org/journals/mcom/2022-91-338/S0025-5718-2022-03758-3/home.html" target="_blank" {color: black} An algorithm to recognize regular singular Mahler systems>Math. Comp. <b>91</b> (2022), pages 2905-2928 </a> ).</dd>
@@ -100,6 +100,8 @@
 		</h3>
 		<p>
 			<ul>
+			 <li> Juin 2024, <b> Exposé à la conférence De rerum natura & Functional Equations and Interactions </b>, Anglet.   </li>
+			 <li> Mars 2024, <b> Exposé au colloque tournant du réseau thématique « Algèbre » au CIRM </b>, Marseille.   </li>
 			 <li> Janvier 2024, <b>Séminaire de théorie des nombres de l’Institut Fourier </b>, Grenoble.   </li>
 			 <li> Juillet 2023, <b>Exposé aux journées du GDR EFI (groupe de recherche "Equations Fonctionnelles et Intéractions") </b>, Rennes.  </li>
 			 <li> Juillet 2022, <b>Exposé à la conférence « Equations Fonctionnelles et Intéractions » de la rencontre internationale AMS-EMS-SMF 2022 </b>, Grenoble.   </li>
