--- a/page_web_en.html
+++ b/page_web_en.html
@@ -70,7 +70,7 @@
 		<dd> preprint, 37 pages, 2023 (<a href ="https://arxiv.org/abs/2208.13448" target="_blank" {color: black}> arxiv </a> ).</dd>
 
 		 <li> <a href="asympmahler.pdf" target="_blank" {color: black}><b>Radial behavior of Mahler functions </b> </a>  with Tanguy Rivoal.  </li>
-		<dd> preprint, 36 pages, 2022 (<a href ="https://hal.science/hal-03703010v1" target="_blank" {color: black}> HAL </a> ).</dd>
+		<dd>  International Journal of Number Theory, 2024 (<a href ="https://www.worldscientific.com/doi/10.1142/S1793042124501070" target="_blank" {color: black}> IJNT, June 2024, pages 1-40 </a> ).</dd>
 
 		 <li> <a href="Regular_Singular.pdf" target="_blank" {color: black}><b>An algorithm to recognize regular singular Mahler systems </b> </a>  with Colin Faverjon.  </li>
 		<dd> Mathematics of Computation, 2022 (<a href ="https://www.ams.org/journals/mcom/2022-91-338/S0025-5718-2022-03758-3/home.html" target="_blank" {color: black} An algorithm to recognize regular singular Mahler systems>Math. Comp. <b>91</b> (2022), pages 2905-2928 </a> ).</dd>
@@ -96,6 +96,8 @@
 		</h3>
 		<p>
 			<ul>
+			 <li> June 2024, <b> Talk at the conference De rerum natura & Functional Equations and Interactions </b>, Anglet.   </li>
+			 <li> March 2024, <b> Talk at the "colloque tournant", annual event of the « Algebra » network </b>, CIRM, Marseille.   </li>
 			 <li> January 2024, <b>Number theory seminar of the Fourier institute </b>, Grenoble.   </li>
 			 <li> July 2023, <b>Talk at the days of the GDR EFI (research group of functional equations and interactions) </b>, Rennes.  </li>
 			 <li> July 2022, <b>Talk at the conference « Functional Equations and Their Interactions » in the AMS-EMS-SMF joint meeting </b>, Grenoble.   </li>
