--- a/page_web_en.html
+++ b/page_web_en.html
@@ -24,7 +24,7 @@
 
 		<div class="col-md-1">
 			<br>
-			<button class="button-style" onclick="document.location='https://marinapoulet.github.io/'">French</button>
+			<button class="button-style" onclick="document.location='https://marinapoulet.github.io/index.html'">French</button>
 		</div>
 	</div>
 </div>
