--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
 
 
 
-<p> Je suis PRAG (professeure agrégée) en mathématiques à <a href ="https://www.univ-amu.fr/" target="_blank"> Aix-Marseille Université</a> depuis septembre 2022.
+<p> Je suis maîtresse de conférences à <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> l'Institut Fourier </a> (Université Grenoble Alpes).
 </p>
 
-<h2> Enseignement </h2>
 
-<p> Vous pouvez trouver les informations et les ressources pédagogiques dans votre cours AMeTICE <a href ="https://ametice.univ-amu.fr/login/index_amu.php" target="_blank"> ici</a> (après avoir renseigné son identifiant et mot de passe). N'hésitez pas à m'envoyer un mail si vous avez des questions.
-</p>
 
 
 <h2> Recherche </h2>
@@ -128,12 +125,13 @@
 		<div id="texte-contact" class="container-fluid">
 			<h3> Contact </h3>
 			<p>
-				e-mail: marina [dot] poulet [at] univ-amu [dot] fr<br><br>
-				<!-- Aix-Marseille Université, France<br> -->
-				<!--  Bât. Braconnier, Bureau 100, --> <br>
-				<!-- 43 boulevard du 11 novembre 1918 --> <br>
-				<!-- 69 622 Villeurbanne cedex --> <br>
+				e-mail: marina [dot] poulet [at] univ-grenoble-alpes [dot] fr<br><br>
+				<!-- Institut Fourier <br> -->
+				<!--  Bureau 230, --> <br>
+				<!-- 100 rue des maths --> <br>
+				<!-- 38610 Gières --> <br>
 				<!-- France -->
+				
 			</p>
 		</div>
 </div>
