--- a/page_web_en.html
+++ b/page_web_en.html
@@ -37,7 +37,7 @@
 
 
 
-<p> I am a math teacher at the <a href ="https://www.univ-amu.fr/" target="_blank"> university of Aix-Marseille</a> (France) since september 2022.
+<p> I am an associate professor (maîtresse de conférences) at the <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> Fourier Institute </a> (University Grenoble Alpes).
 </p>
 
 
@@ -124,12 +124,12 @@
 		<div id="texte-contact" class="container-fluid">
 			<h3> Contact </h3>
 			<p>
-				email: marina [dot] poulet [at] univ-amu [dot] fr<br><br>
-				<!-- Aix-Marseille Université, France<br> -->
-				<!--  Bât. Braconnier, Bureau 100, --> <br>
-				<!-- 43 boulevard du 11 novembre 1918 --> <br>
-				<!-- 69 622 Villeurbanne cedex --> <br>
-				<!-- France -->
+				email: marina [dot] poulet [at] univ-grenoble-alpes [dot] fr<br><br>
+				 Institut Fourier <br>
+				 Bureau 230, <br>
+				 100 rue des maths  <br>
+				 38610 Gières  <br>
+				 France 
 			</p>
 		</div>
 </div>
