--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 			<h3> Contact </h3>
 			<p>
 				e-mail: marina [dot] poulet [at] univ-grenoble-alpes [dot] fr<br><br>
-				<!-- Institut Fourier <br> -->
-				<!--  Bureau 230, --> <br>
-				<!-- 100 rue des maths --> <br>
-				<!-- 38610 Gières --> <br>
-				<!-- France -->
+				 Institut Fourier <br>
+				Bureau 230,  <br>
+				100 rue des maths  <br>
+				38610 Gières  <br>
+				France 
 				
 			</p>
 		</div>
