--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<span>  Domaine de recherche </span>
 		</h3>
 		<p>
-			Je travaille principalement sur la théorie de Galois appliquée aux équations fonctionnelles (équations différentielles et aux différences), plus précisément :
+			Je travaille principalement sur la théorie de Galois des équations fonctionnelles (équations différentielles et aux différences), plus précisément :
 			<ul>
   		<li>groupes de Galois des équations fonctionnelles : sous-groupes Zariski-denses, calculs, applications pour des critères de transcendance, ... </li>
   		<li>équations de Mahler : algorithmes (implémentation en Python) pour reconnaître les singularités régulières, comportement radial des solutions, ...</li>
