--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 <p> Je suis maîtresse de conférences à <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> l'Institut Fourier </a> (Université Grenoble Alpes).
 </p>
 
+<!--<h2> Enseignement </h2>
 
+<p> Vous pouvez trouver les informations et les ressources pédagogiques dans votre cours AMeTICE <a href ="https://ametice.univ-amu.fr/login/index_amu.php" target="_blank"> ici</a> (après avoir renseigné son identifiant et mot de passe). N'hésitez pas à m'envoyer un mail si vous avez des questions.
+</p>-->
 
 
 <h2> Recherche </h2>
@@ -67,8 +70,11 @@
 		</h3>
 		<p>
 		<ul>
-		 <li> <a href="3orderArxiv.pdf" target="_blank" {color: black}><b>On the computation of the difference Galois groups of order three equations </b> </a>  avec Thomas Dreyfus.  </li>
-		<dd> prépublication, 37 pages, 2023 (<a href ="https://arxiv.org/abs/2208.13448" target="_blank" {color: black}> arxiv </a> ).</dd>
+			<li> <a href="RegSingMahlerEqVF.pdf" target="_blank" {color: black}><b>Regular singular Mahler equations and Newton polygons </b> </a>  avec Colin Faverjon.  </li>
+			<dd> Journal of the Mathematical Society of Japan, 2025 (<a href ="https://www.mathsoc.jp/publication/JMSJ/inpress.html" target="_blank" {color: black}> à paraître </a> ).</dd>
+
+		 <li> <a href="3order.pdf" target="_blank" {color: black}><b>On the computation of the difference Galois groups of order three equations </b> </a>  avec Thomas Dreyfus.  </li>
+		<dd> Bulletin de la Société Mathématique de France, 2025 (<a href ="https://smf.emath.fr/publications/bulletin-articles-acceptes" target="_blank" {color: black}> à paraître </a> ).</dd>
 
 		 <li> <a href="VFasymptMahler.pdf" target="_blank" {color: black}><b>Radial behavior of Mahler functions </b> </a>  avec Tanguy Rivoal.  </li>
 		<dd> International Journal of Number Theory, 2024 (<a href ="https://www.worldscientific.com/doi/10.1142/S1793042124501070" target="_blank" {color: black}> IJNT, June 2024, pages 1-40 </a> ).</dd>
@@ -97,6 +103,14 @@
 		</h3>
 		<p>
 			<ul>
+			 <li> (à venir) <b>Séminaire de théorie des nombres et géométrie arithmétique du laboratoire de mathématiques Nicolas Oresme </b>, Caen.   </li>
+			 <li> Mai 2025, <b>Séminaire de combinatoire et théorie des nombres de l’Institut Camille Jordan </b>, Lyon.   </li>
+			 <li> Avril 2025, <b> Exposé à la conférence «Equations différentielles et aux différences : analyse, arithmétique et approches galoisiennes»</b>, Lille.   </li>
+			 <li> Mars 2025, <b>Séminaire d’analyse de l’Institut de Recherche Mathématiques Avancée de Strasbourg </b>, Strasbourg. </li>
+			 <li> Février 2025, <b>Exposé à la semaine de conférence « théories de Galois différentielles et transcendance » du mois thématique au CIRM « Singularités, équations différentielles, transcendance »</b>, Marseille.   </li>
+			 <li> Décembre 2024, <b>Séminaire de Géométrie, Algèbre, Dynamique et Topologie de l’Institut de Mathématiques de Bourgogne </b>, Dijon.   </li>
+			 <li> Novembre 2024, <b>Séminaire de théorie des nombres de l’Institut de Mathématiques de Bordeaux </b>, Bordeaux.   </li>
+			 <li> Novembre 2024, <b>Séminaire de géométrie analytique de l'IRMAR </b>, Rennes.   </li>
 			 <li> Juin 2024, <b> Exposé à la conférence De rerum natura & Functional Equations and Interactions </b>, Anglet.   </li>
 			 <li> Mars 2024, <b> Exposé au colloque tournant du réseau thématique « Algèbre » au CIRM </b>, Marseille.   </li>
 			 <li> Janvier 2024, <b>Séminaire de théorie des nombres de l’Institut Fourier </b>, Grenoble.   </li>
@@ -130,8 +144,7 @@
 				Bureau 230,  <br>
 				100 rue des maths  <br>
 				38610 Gières  <br>
-				France 
-				
+				France
 			</p>
 		</div>
 </div>
