--- a/page_web_en.html
+++ b/page_web_en.html
@@ -66,8 +66,11 @@
 		</h3>
 		<p>
 		<ul>
-		 <li> <a href="3orderArxiv.pdf" target="_blank" {color: black}><b>On the computation of the difference Galois groups of order three equations </b> </a>  with Thomas Dreyfus.  </li>
-		<dd> preprint, 37 pages, 2023 (<a href ="https://arxiv.org/abs/2208.13448" target="_blank" {color: black}> arxiv </a> ).</dd>
+			<li> <a href="RegSingMahlerEqVF.pdf" target="_blank" {color: black}><b>Regular singular Mahler equations and Newton polygons </b> </a>  with Colin Faverjon.  </li>
+			<dd> Journal of the Mathematical Society of Japan, 2025 (<a href ="https://www.mathsoc.jp/publication/JMSJ/inpress.html" target="_blank" {color: black}> to appear </a> ).</dd>
+
+			<li> <a href="3order.pdf" target="_blank" {color: black}><b>On the computation of the difference Galois groups of order three equations </b> </a>  with Thomas Dreyfus.  </li>
+ 		<dd> Bulletin de la Société Mathématique de France, 2025 (<a href ="https://smf.emath.fr/publications/bulletin-articles-acceptes" target="_blank" {color: black}> to appear </a> ).</dd>
 
 		 <li> <a href="asympmahler.pdf" target="_blank" {color: black}><b>Radial behavior of Mahler functions </b> </a>  with Tanguy Rivoal.  </li>
 		<dd>  International Journal of Number Theory, 2024 (<a href ="https://www.worldscientific.com/doi/10.1142/S1793042124501070" target="_blank" {color: black}> IJNT, June 2024, pages 1-40 </a> ).</dd>
@@ -96,6 +99,14 @@
 		</h3>
 		<p>
 			<ul>
+			 <li> (à venir) <b>Seminar of number theory and arithmetic geometry of the Laboratory of Mathematics Nicolas Oresme </b>, Caen.   </li>
+ 			 <li> Mai 2025, <b>Seminar of combinatorics and number theory of the Camille Jordan Institute </b>, Lyon.   </li>
+ 			 <li> Avril 2025, <b> Talk at the conference «Differential and difference equations: analysis, arithmetic and Galoisian approaches»</b>, Lille.   </li>
+ 			 <li> Mars 2025, <b>Analysis seminar of the Institute for Advanced Mathematical Research </b>, Strasbourg. </li>
+ 			 <li> Février 2025, <b> Talk at the week « Differential Galois theories and transcendence » of the thematic month at CIRM « Singularities, differential equations, transcendence »</b>, Marseille.   </li>
+ 			 <li> Décembre 2024, <b>Seminar of Geometry, Algebra, Dynamics and Topology of the Mathematical Institute of Bourgogne </b>, Dijon.   </li>
+ 			 <li> November 2024, <b>Number theory seminar of the IMB </b>, Bordeaux.   </li>
+ 			 <li> November 2024, <b>Analytic geometry seminar of the IRMAR </b>, Rennes.   </li>
 			 <li> June 2024, <b> Talk at the conference De rerum natura & Functional Equations and Interactions </b>, Anglet.   </li>
 			 <li> March 2024, <b> Talk at the "colloque tournant", annual event of the « Algebra » network </b>, CIRM, Marseille.   </li>
 			 <li> January 2024, <b>Number theory seminar of the Fourier institute </b>, Grenoble.   </li>
@@ -126,10 +137,10 @@
 			<p>
 				email: marina [dot] poulet [at] univ-grenoble-alpes [dot] fr<br><br>
 				 Institut Fourier <br>
-				 Bureau 230, <br>
+				  Bureau 230, <br>
 				 100 rue des maths  <br>
 				 38610 Gières  <br>
-				 France 
+				 France
 			</p>
 		</div>
 </div>
