--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-<p> Je suis maîtresse de conférences à <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> l'Institut Fourier </a> (Université Grenoble Alpes).
+<p> Je suis maîtresse de conférences à <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> l'Institut Fourier </a> (Université Grenoble Alpes) depuis 2024.
 </p>
 
 <!--<h2> Enseignement </h2>
@@ -70,11 +70,14 @@
 		</h3>
 		<p>
 		<ul>
+			<li> <a href="preprintSolutionsMahlerEq.pdf" target="_blank" {color: black}><b>Computing basis of solutions of any Mahler equation </b> </a>  avec Colin Faverjon.  </li>
+			<dd> Prépublication, 2025 (<a href ="https://hal.science/hal-05376937v1/" target="_blank" {color: black}> HAL </a> ).</dd>
+
 			<li> <a href="RegSingMahlerEqVF.pdf" target="_blank" {color: black}><b>Regular singular Mahler equations and Newton polygons </b> </a>  avec Colin Faverjon.  </li>
-			<dd> Journal of the Mathematical Society of Japan, 2025 (<a href ="https://www.mathsoc.jp/publication/JMSJ/inpress.html" target="_blank" {color: black}> à paraître </a> ).</dd>
+			<dd> Journal of the Mathematical Society of Japan, 2025 (<a href ="https://projecteuclid.org/journals/journal-of-the-mathematical-society-of-japan/advance-publication/Regular-singular-Mahler-equations-and-Newton-polygons/10.2969/jmsj/94739473.full" target="_blank" {color: black}> J. Math. Soc. Japan Advance Publication, 2025, pages 1-33 </a> ).</dd>
 
 		 <li> <a href="3order.pdf" target="_blank" {color: black}><b>On the computation of the difference Galois groups of order three equations </b> </a>  avec Thomas Dreyfus.  </li>
-		<dd> Bulletin de la Société Mathématique de France, 2025 (<a href ="https://smf.emath.fr/publications/bulletin-articles-acceptes" target="_blank" {color: black}> à paraître </a> ).</dd>
+		<dd> Bulletin de la Société Mathématique de France, 2025 (<a href ="https://smf.emath.fr/node/3675050" target="_blank" {color: black}> Bull. Soc. Math. France 153 (1), 2025, pages 143-186 </a> ).</dd>
 
 		 <li> <a href="VFasymptMahler.pdf" target="_blank" {color: black}><b>Radial behavior of Mahler functions </b> </a>  avec Tanguy Rivoal.  </li>
 		<dd> International Journal of Number Theory, 2024 (<a href ="https://www.worldscientific.com/doi/10.1142/S1793042124501070" target="_blank" {color: black}> IJNT, June 2024, pages 1-40 </a> ).</dd>
@@ -103,7 +106,8 @@
 		</h3>
 		<p>
 			<ul>
-			 <li> (à venir) <b>Séminaire de théorie des nombres et géométrie arithmétique du laboratoire de mathématiques Nicolas Oresme </b>, Caen.   </li>
+			<li> Septembre 2025, <b>Séminaire de théorie des nombres de l’Institut Fourier </b>, Grenoble.   </li>
+			 <li> Mai 2025, <b>Séminaire de théorie des nombres et géométrie arithmétique du laboratoire de mathématiques Nicolas Oresme </b>, Caen.   </li>
 			 <li> Mai 2025, <b>Séminaire de combinatoire et théorie des nombres de l’Institut Camille Jordan </b>, Lyon.   </li>
 			 <li> Avril 2025, <b> Exposé à la conférence «Equations différentielles et aux différences : analyse, arithmétique et approches galoisiennes»</b>, Lille.   </li>
 			 <li> Mars 2025, <b>Séminaire d’analyse de l’Institut de Recherche Mathématiques Avancée de Strasbourg </b>, Strasbourg. </li>
