--- a/page_web_en.html
+++ b/page_web_en.html
@@ -37,7 +37,7 @@
 
 
 
-<p> I am an associate professor (maîtresse de conférences) at the <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> Fourier Institute </a> (University Grenoble Alpes).
+<p> Since 2024, I am an associate professor (maîtresse de conférences) at the <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> Fourier Institute </a> (University Grenoble Alpes).
 </p>
 
 
@@ -66,11 +66,14 @@
 		</h3>
 		<p>
 		<ul>
+				<li> <a href="preprintSolutionsMahlerEq.pdf" target="_blank" {color: black}><b>Computing basis of solutions of any Mahler equation </b> </a>  with Colin Faverjon.  </li>
+			<dd> Preprint, 2025 (<a href ="https://hal.science/hal-05376937v1/" target="_blank" {color: black}> HAL </a> ).</dd>
+
 			<li> <a href="RegSingMahlerEqVF.pdf" target="_blank" {color: black}><b>Regular singular Mahler equations and Newton polygons </b> </a>  with Colin Faverjon.  </li>
-			<dd> Journal of the Mathematical Society of Japan, 2025 (<a href ="https://www.mathsoc.jp/publication/JMSJ/inpress.html" target="_blank" {color: black}> to appear </a> ).</dd>
+			<dd> Journal of the Mathematical Society of Japan, 2025(<a href ="https://projecteuclid.org/journals/journal-of-the-mathematical-society-of-japan/advance-publication/Regular-singular-Mahler-equations-and-Newton-polygons/10.2969/jmsj/94739473.full" target="_blank" {color: black}> J. Math. Soc. Japan Advance Publication, 2025, pages 1-33 </a> ).</dd>
 
 			<li> <a href="3order.pdf" target="_blank" {color: black}><b>On the computation of the difference Galois groups of order three equations </b> </a>  with Thomas Dreyfus.  </li>
- 		<dd> Bulletin de la Société Mathématique de France, 2025 (<a href ="https://smf.emath.fr/publications/bulletin-articles-acceptes" target="_blank" {color: black}> to appear </a> ).</dd>
+ 		<dd> Bulletin de la Société Mathématique de France, 2025 (<a href ="https://smf.emath.fr/node/3675050" target="_blank" {color: black}> Bull. Soc. Math. France 153 (1), 2025, pages 143-186 </a> ).</dd>
 
 		 <li> <a href="asympmahler.pdf" target="_blank" {color: black}><b>Radial behavior of Mahler functions </b> </a>  with Tanguy Rivoal.  </li>
 		<dd>  International Journal of Number Theory, 2024 (<a href ="https://www.worldscientific.com/doi/10.1142/S1793042124501070" target="_blank" {color: black}> IJNT, June 2024, pages 1-40 </a> ).</dd>
@@ -99,12 +102,13 @@
 		</h3>
 		<p>
 			<ul>
-			 <li> (à venir) <b>Seminar of number theory and arithmetic geometry of the Laboratory of Mathematics Nicolas Oresme </b>, Caen.   </li>
- 			 <li> Mai 2025, <b>Seminar of combinatorics and number theory of the Camille Jordan Institute </b>, Lyon.   </li>
- 			 <li> Avril 2025, <b> Talk at the conference «Differential and difference equations: analysis, arithmetic and Galoisian approaches»</b>, Lille.   </li>
- 			 <li> Mars 2025, <b>Analysis seminar of the Institute for Advanced Mathematical Research </b>, Strasbourg. </li>
- 			 <li> Février 2025, <b> Talk at the week « Differential Galois theories and transcendence » of the thematic month at CIRM « Singularities, differential equations, transcendence »</b>, Marseille.   </li>
- 			 <li> Décembre 2024, <b>Seminar of Geometry, Algebra, Dynamics and Topology of the Mathematical Institute of Bourgogne </b>, Dijon.   </li>
+			<li> September 2025, <b>Number theory seminar of the Fourier institute </b>, Grenoble.   </li>
+			 <li> May 2025 <b>Seminar of number theory and arithmetic geometry of the Laboratory of Mathematics Nicolas Oresme </b>, Caen.   </li>
+ 			 <li> May 2025, <b>Seminar of combinatorics and number theory of the Camille Jordan Institute </b>, Lyon.   </li>
+ 			 <li> April 2025, <b> Talk at the conference «Differential and difference equations: analysis, arithmetic and Galoisian approaches»</b>, Lille.   </li>
+ 			 <li> March 2025, <b>Analysis seminar of the Institute for Advanced Mathematical Research </b>, Strasbourg. </li>
+ 			 <li> February 2025, <b> Talk at the week « Differential Galois theories and transcendence » of the thematic month at CIRM « Singularities, differential equations, transcendence »</b>, Marseille.   </li>
+ 			 <li> December 2024, <b>Seminar of Geometry, Algebra, Dynamics and Topology of the Mathematical Institute of Bourgogne </b>, Dijon.   </li>
  			 <li> November 2024, <b>Number theory seminar of the IMB </b>, Bordeaux.   </li>
  			 <li> November 2024, <b>Analytic geometry seminar of the IRMAR </b>, Rennes.   </li>
 			 <li> June 2024, <b> Talk at the conference De rerum natura & Functional Equations and Interactions </b>, Anglet.   </li>
