--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-<p> Je suis maîtresse de conférences à <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> l'Institut Fourier </a> (Université Grenoble Alpes) depuis 2024.
+<p> Je suis maîtresse de conférences à <a href ="https://www-fourier.univ-grenoble-alpes.fr/fr" target="_blank"> l'Institut Fourier </a> (Université Grenoble Alpes) depuis 2024.
 </p>
 
 <!--<h2> Enseignement </h2>
@@ -157,3 +157,4 @@
 </div>
 </body>
 </html>
+
