--- a/page_web_en.html
+++ b/page_web_en.html
@@ -37,7 +37,7 @@
 
 
 
-<p> Since 2024, I am an associate professor (maîtresse de conférences) at the <a href ="https://www-fourier.ujf-grenoble.fr/" target="_blank"> Fourier Institute </a> (University Grenoble Alpes).
+<p> Since 2024, I am an associate professor (maîtresse de conférences) at the <a href ="https://www-fourier.univ-grenoble-alpes.fr/fr" target="_blank"> Fourier Institute </a> (University Grenoble Alpes).
 </p>
 
 
@@ -153,3 +153,4 @@
 </div>
 </body>
 </html>
+
